# ChangeLog for dev-python/snot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jan 2012; James Rowe <jnrowe@gmail.com> -snot-0.2.ebuild, snot-0.6.ebuild:
  Keyworded x86.

  16 Jan 2012; James Rowe <jnrowe@gmail.com> snot-0.6.ebuild:
  Keyworded amd64.

*snot-0.6 (17 Dec 2011)

  17 Dec 2011; James Rowe <jnrowe@gmail.com> +snot-0.6.ebuild:
  Version bump [504].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 Sep 2011; James Rowe <jnrowe@gmail.com> snot-0.2.ebuild:
  QA: Whitespace fix.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> snot-0.2.ebuild:
  Keyworded x86.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> snot-0.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> snot-0.2.ebuild:
  Keyworded ~x86.

*snot-0.2 (01 Jul 2011)

  01 Jul 2011; James Rowe <jnrowe@gmail.com> +snot-0.2.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, by me [406].
