@@ -5,7 +5,7 @@ DIST snot-0.6.tar.gz 2364 RMD160 5f008f670eb7fdd47e67d9ed223559dd7d39d3f8 SHA1 6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8UXR0ACgkQzJrj3cAXR0mvPQCfbT/pw7jH5iNgKU4sqVjMdTwQ
-z4UAn0sEkHC3T/Hns3oNoD/ukRJ7nVup
-=+dsQ
+iEYEAREKAAYFAk9SQsYACgkQzJrj3cAXR0m6RgCfW4ES62wiuhrWqopGnbKvDcrb
+zGwAn3uaf6xDWKam9ut5e5o4tWeBLU5D
+=cOlD
 -----END PGP SIGNATURE-----
