@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> snot-0.6.ebuild:
+  Removed Python 2.4 support.
+
   16 Jan 2012; James Rowe <jnrowe@gmail.com> -snot-0.2.ebuild, snot-0.6.ebuild:
   Keyworded x86.
 
